--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -24,6 +24,7 @@ if (flutterVersionName == null) {
 
 android {
     namespace "com.example.adv_basics"
+    compileSdkVersion 34
     compileSdkVersion flutter.compileSdkVersion
     ndkVersion flutter.ndkVersion
 
